# pgstream

./: .gitignore  .travis.yml  Example.hs  LICENSE  README.md  RELEASE.md  check_pg_typeoids  pg_stream.cabal  pgstream.cabal  stack.yaml
cbits/: array_conversion.c  array_conversion.dis  array_conversion.h
src/Database/PostgreSQL/: Stream.hs
src/Database/PostgreSQL/Stream/: Connection.hs  FromRow.hs  Parallel.hs  QueryBuilder.hs  Types.hs
