name:                pgstream
version:             0.1.0.5
license:             BSD3
copyright:           Copyright 2016 Elsen Inc.
category:            Finance
description:         Streaming queries from Postgres
synopsis:            Streaming queries from Postgres
license-file:        LICENSE
author:              Elsen Inc.
maintainer:          info@elsen.co
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
extra-source-files:
  cbits/array_conversion.h

Source-Repository head
    Type: git
    Location: git@github.com:elsen-trading/pgstream.git

-- Compiler flags
flag optimized
  manual: True
  default: True
  description: Compile with optimizations enabled.

flag j
  manual: True
  default: False
  description: Compile in parallel.

-- Executable
library
  exposed-modules:
    Database.PostgreSQL.Stream
    Database.PostgreSQL.Stream.Parallel
    Database.PostgreSQL.Stream.Connection
    Database.PostgreSQL.Stream.Types
    Database.PostgreSQL.Stream.FromRow
    Database.PostgreSQL.Stream.QueryBuilder
  other-modules: Paths_pgstream
  build-depends:
    base                 >= 4.11   && <4.13,

    -- Standard library
    text                 >= 1.1   && <1.3,
    bytestring           >= 0.10  && <0.11,
    attoparsec           >= 0.12  && <0.14,
    vector               >= 0.11  && <0.13,
    uuid                 >= 1.3   && <1.4,
    scientific           >= 0.3   && <0.4,
    stringsearch         >= 0.3   && <0.4,
    time                 >= 1.6   && <1.9,
    deepseq              >= 1.3   && <1.5,

    -- Streaming
    conduit              >= 1.3   && <1.4,
    conduit-extra        >= 1.1   && <1.4,
    resource-pool        >= 0.2   && <0.3,
    blaze-builder        >= 0.4   && <0.5,
    resourcet            >= 1.1   && <1.3,

    -- SQL
    postgresql-libpq     >= 0.9   && <0.10,
    postgresql-binary    >= 0.12  && <0.13,

    -- Parallelism
    async                >= 2.1   && <2.3,
    stm                  >= 2.2   && <2.6,
    parallel             >= 3.2   && <3.3,
    stm-conduit          >= 3.0   && <5,
    stm-chans            >= 2.0   && <3.1,

    -- Text
    template-haskell     >= 2.8   && <3.0,
    binary-parser        >= 0.5   && <6.0,

    -- Control flow
    mtl                  >= 2.2   && <3.0,
    transformers         >= 0.5   && <0.6,
    unliftio             >= 0.2   && <0.3

    -- Testing
    -- criterion            -any

  if flag(j) && impl(ghc >= 7.8)
    ghc-options: -j3

  C-sources:
    cbits/array_conversion.c

  cc-options:         -std=c99 -O2 -fPIC
  Include-dirs:       cbits
  ghc-options:
    -O2
    -funbox-strict-fields
    "-with-rtsopts=-N"
    -rtsopts
    -threaded

  default-language:    Haskell2010
  hs-source-dirs:      src
